fix: add drop shadow to enticing on projectcard for readability

--- a/src/components/molecule/ProjectCard/Column/styles.module.css
+++ b/src/components/molecule/ProjectCard/Column/styles.module.css
@@ -76,6 +76,7 @@
   padding: 0.3rem 0.5rem;
   width: fit-content;
   background-color: var(--color-blue-500);
+  box-shadow: var(--shadow-xl);
 }
 
 .faseBoundNotice__green p {
@@ -83,6 +84,7 @@
   width: fit-content;
   padding: 0.3rem 0.5rem;
   background-color: var(--color-green-500);
+  box-shadow: var(--shadow-xl);
 }
 
 @media (--md-n-above) {
